--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/mdi": "^1.1.67",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.17.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
