--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@iconify-json/mdi": "^1.1.67",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.17.0",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
+    "pinia": "^2.1.7",
     "vue": "latest",
     "zod": "^3.23.8"
   }
