--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.67.0",
     "@iconify-json/mdi": "^1.1.67",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.17.0",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
     "pinia": "^2.1.7",
     "vue": "latest",
-    "zod": "^3.23.8",
-    "@nuxtjs/color-mode": "^3.3.2"
+    "zod": "^3.23.8"
   }
 }
